...
                    tileSize={12}
                    origin={{ x: 0, y: 0 }}
                    rotation={90}
                    style={styles.titleIconGlyph}
                  />
                </View>
                <Text testID="indexer-title" style={styles.title}>
                  Connect to an indexer
                </Text>
              </View>
              <Text style={styles.subtitle}>
                An indexer backs up your encrypted file metadata and syncs it across devices. It
                cannot access your files. Files are stored on and retrieved directly from the Sia
...
            </View>
          )}
        </KeyboardAwareScrollView>
        {!showWaiting ? (
          <View style={[styles.footer, { paddingBottom: bottom + 12 }]}>
            <Button
              testID="indexer-authorize-button"
              onPress={handleContinue}
              disabled={isInputEmpty}
            >
              Authorize
            </Button>
          </View>
...
