...

export function MainStack() {
  return (
    <Stack.Navigator>
      <Stack.Screen
        name="LibraryHome"
        options={{ title: 'Library', headerShown: false }}
        component={LibraryScreen}
      />
      <Stack.Screen
        name="TagLibrary"
        options={{ headerShown: false }}
        component={TagLibraryScreen}
...
